Добавлен endpoint - auth/logout
