# internal/module/auth/handler/refresh.go
@@ -7,6 +7,8 @@ import (
 	"github.com/Brotiger/per-painted_poker-backend/internal/config"
 	"github.com/Brotiger/per-painted_poker-backend/internal/module/auth/request"
 	"github.com/Brotiger/per-painted_poker-backend/internal/module/auth/response"
+	sharedResponse "github.com/Brotiger/per-painted_poker-backend/internal/shared/response"
+	sharedService "github.com/Brotiger/per-painted_poker-backend/internal/shared/service"
 	"github.com/Brotiger/per-painted_poker-backend/internal/validator"
 	"github.com/gofiber/fiber/v2"
 	"go.mongodb.org/mongo-driver/bson/primitive"
@@ -16,9 +18,9 @@ import (
 // @Tags Auth
 // @Router /auth/refresh [post]
 // @Produce json
-// @Failure 200 {object} response.Token "Успешный ответ."
-// @Failure 400 {object} response.Error400 "Не валидный запрос."
-// @Failure 401 {object} response.Error401 "Неверный или просроченный токен обновления."
+// @Success 200 {object} response.Token "Успешный ответ."
+// @Failure 400 {object} sharedResponse.Error400 "Не валидный запрос."
+// @Failure 401 {object} sharedResponse.Error401 "Неверный или просроченный токен обновления."
 // @Failure 500 "Ошибка сервера."
 // @securityDefinitions.apikey Authorization
 // @in header
@@ -29,7 +31,7 @@ func (a *Auth) Refresh(c *fiber.Ctx) error {
 
 	var requetRefresh request.Refresh
 	if err := c.BodyParser(&requetRefresh); err != nil {
-		return c.Status(fiber.StatusBadRequest).JSON(response.Error400{
+		return c.Status(fiber.StatusBadRequest).JSON(sharedResponse.Error400{
 			Message: "Не валидный запрос.",
 		})
 	}
@@ -37,17 +39,21 @@ func (a *Auth) Refresh(c *fiber.Ctx) error {
 	if err := validator.Validator.Struct(requetRefresh); err != nil {
 		fieldErrors := validator.ValidateErr(err)
 
-		return c.Status(fiber.StatusBadRequest).JSON(response.Error400{
+		return c.Status(fiber.StatusBadRequest).JSON(sharedResponse.Error400{
 			Message: "Ошибка валидации.",
 			Errors:  fieldErrors,
 		})
 	}
 
-	tokenClaims, err := a.RefreshTokenService.VerifyToken(requetRefresh.RefreshToken)
+	tokenClaims, err := a.SharedTokenService.VerifyToken(requetRefresh.RefreshToken)
 	if err != nil {
-		return c.Status(fiber.StatusUnauthorized).JSON(response.Error401{
-			Message: "Неверный или просроченный токен обновления.",
-		})
+		if err == sharedService.ErrInvalidToken {
+			return c.Status(fiber.StatusUnauthorized).JSON(sharedResponse.Error401{
+				Message: "Просроченный токен обновления.",
+			})
+		}
+
+		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
 	}
 
 	userId, err := primitive.ObjectIDFromHex(tokenClaims.UserId)
@@ -55,10 +61,24 @@ func (a *Auth) Refresh(c *fiber.Ctx) error {
 		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
 	}
 
-	res, err := a.RefreshTokenService.GenerateTokens(ctx, userId)
+	exist, err := a.RefreshTokenService.CheckRefreshToken(ctx, userId)
 	if err != nil {
 		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
 	}
 
-	return c.JSON(res)
+	if !exist {
+		return c.Status(fiber.StatusUnauthorized).JSON(sharedResponse.Error401{
+			Message: "Невалидный токен обновления.",
+		})
+	}
+
+	dtoToken, err := a.RefreshTokenService.GenerateTokens(ctx, userId)
+	if err != nil {
+		return fiber.NewError(fiber.StatusInternalServerError, err.Error())
+	}
+
+	return c.JSON(response.Token{
+		AccessToken:  dtoToken.AccessToken,
+		RefreshToken: dtoToken.RefreshToken,
+	})
 }
